--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="app-screen-profile">
                             <!-- Top bar -->
                             <div class="mock-topbar">
-                                <span class="mock-username">ali_yilmaz</span>
+                                <span class="mock-username">caglarkc</span>
                                 <i class="fas fa-cog"></i>
                             </div>
                             <!-- Profile info -->
@@ -83,7 +83,7 @@
                                 <div class="mock-avatar">
                                     <i class="fas fa-user"></i>
                                 </div>
-                                <div class="mock-name">Ali Yılmaz</div>
+                                <div class="mock-name">Ali Çağlar</div>
                                 <div class="mock-location"><i class="fas fa-map-marker-alt"></i> İstanbul, TR</div>
                             </div>
                             <!-- Stats row -->
@@ -114,13 +114,13 @@
                                     <div class="mock-post-header">
                                         <div class="mock-post-avatar">AY</div>
                                         <div class="mock-post-meta">
-                                            <span>ali_yilmaz</span>
+                                            <span>caglarkc</span>
                                             <span class="mock-post-time">Bugün 08:30 • Salon</span>
                                         </div>
                                         <i class="fas fa-ellipsis-h"></i>
                                     </div>
                                     <div class="mock-post-tags">
-                                        <span class="mock-tag leg">LEG DAY</span>
+                                        <span class="mock-tag leg">BACK DAY</span>
                                         <span class="mock-tag star"><i class="fas fa-star"></i> 4.8</span>
                                     </div>
                                     <div class="mock-post-image">
