--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     <!-- ========== NAVBAR ========== -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">IMMENSE<span class="dot">.</span></a>
+            <a href="#" class="logo">IMMENSE<span class="dot"></span></a>
             <div class="nav-menu">
                 <ul class="nav-links">
-                    <li><a href="#features">Özellikler</a></li>
                     <li><a href="#community">Topluluk</a></li>
+                    <li><a href="#features">Özellikler</a></li>
                     <li><a href="#coaching">Koçluk</a></li>
                     <li><a href="#ai-coach">AI Koç</a></li>
-                    <li><a href="#preregister">Ön Kayıt</a></li>
                 </ul>
                 <div class="nav-cta">
                     <a href="#preregister" class="btn btn-primary">Ön Kayıt Ol</a>
@@ -48,8 +47,7 @@
             <div class="hero-text">
                 <span class="badge">Fitness Sosyal Platformu</span>
                 <h1>Antrenmanlarını <br><span class="gradient-text">Geleceğe Taşı</span></h1>
-                <p>IMMENSE, antrenman takibi, beslenme yönetimi, sosyal paylaşım, AI koçluk ve insan koçluğunu tek
-                    platformda birleştiren kapsamlı fitness sosyal platformu.</p>
+                <p>Intensity builds immensity - yoğunluğun, büyüklüğünü inşa eder; Immense ise antrenmanını, beslenmeni ve koçluğunu tek yerde toplayarak bu potansiyeli gerçeğe dönüştürür.</p>
                 <div class="cta-group">
                     <a href="#preregister" class="btn btn-primary">Ön Kayıt Ol</a>
                     <a href="#community" class="btn btn-secondary">Keşfet <i class="fas fa-arrow-down"></i></a>
@@ -70,87 +68,47 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="phone-mockup">
-                    <div class="screen">
-                        <div class="app-screen-profile">
-                            <!-- Top bar -->
-                            <div class="mock-topbar">
-                                <span class="mock-username">caglarkc</span>
-                                <i class="fas fa-cog"></i>
+                <div class="phone-slider-wrap">
+                    <button class="slider-arrow slider-arrow-left" aria-label="Önceki ekran">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <div class="phone-mockup">
+                        <div class="phone-notch"></div>
+                        <div class="phone-home-indicator"></div>
+                    <div class="screen screen-slider">
+                        <div class="app-slider">
+                            <div class="app-slide">
+                                <img src="assets/ss/1.png" alt="Ekran 1" onerror="this.src='https://placehold.co/320x650/1e293b/10b981?text=Ekran+1'">
                             </div>
-                            <!-- Profile info -->
-                            <div class="mock-profile-info">
-                                <div class="mock-avatar">
-                                    <i class="fas fa-user"></i>
-                                </div>
-                                <div class="mock-name">Ali Çağlar</div>
-                                <div class="mock-location"><i class="fas fa-map-marker-alt"></i> İstanbul, TR</div>
+                            <div class="app-slide">
+                                <img src="assets/ss/2.png" alt="Ekran 2" onerror="this.src='https://placehold.co/320x650/1e293b/10b981?text=Ekran+2'">
                             </div>
-                            <!-- Stats row -->
-                            <div class="mock-stats-row">
-                                <div class="mock-stat">
-                                    <span class="mock-stat-num">142</span>
-                                    <span class="mock-stat-label">ANTRENMAN</span>
-                                </div>
-                                <div class="mock-stat">
-                                    <span class="mock-stat-num">1.2K</span>
-                                    <span class="mock-stat-label">TAKİPÇİ</span>
-                                </div>
-                                <div class="mock-stat">
-                                    <span class="mock-stat-num">150</span>
-                                    <span class="mock-stat-label">TAKİP</span>
-                                </div>
+                            <div class="app-slide">
+                                <img src="assets/ss/3.png" alt="Ekran 3" onerror="this.src='https://placehold.co/320x650/1e293b/10b981?text=Ekran+3'">
                             </div>
-                            <!-- Quick action chips -->
-                            <div class="mock-chips">
-                                <span class="mock-chip"><i class="fas fa-chart-bar"></i> İstatistik</span>
-                                <span class="mock-chip"><i class="fas fa-dumbbell"></i> Egzersizler</span>
-                                <span class="mock-chip"><i class="fas fa-ruler"></i> Ölçüm</span>
+                            <div class="app-slide">
+                                <img src="assets/ss/4.png" alt="Ekran 4" onerror="this.src='https://placehold.co/320x650/1e293b/10b981?text=Ekran+4'">
                             </div>
-                            <!-- Recent Activity -->
-                            <div class="mock-activity">
-                                <div class="mock-activity-title">SON AKTİVİTE</div>
-                                <div class="mock-post-card">
-                                    <div class="mock-post-header">
-                                        <div class="mock-post-avatar">AY</div>
-                                        <div class="mock-post-meta">
-                                            <span>caglarkc</span>
-                                            <span class="mock-post-time">Bugün 08:30 • Salon</span>
-                                        </div>
-                                        <i class="fas fa-ellipsis-h"></i>
-                                    </div>
-                                    <div class="mock-post-tags">
-                                        <span class="mock-tag leg">BACK DAY</span>
-                                        <span class="mock-tag star"><i class="fas fa-star"></i> 4.8</span>
-                                    </div>
-                                    <div class="mock-post-image">
-                                        <i class="fas fa-image"></i>
-                                    </div>
-                                    <div class="mock-post-title">Afternoon Grind</div>
-                                    <div class="mock-post-bottom">
-                                        <div class="mock-post-metrics">
-                                            <span>VOL. <strong>12k kg</strong></span>
-                                            <span>PRS <strong>2</strong></span>
-                                        </div>
-                                        <div class="mock-post-actions">
-                                            <i class="fas fa-heart"></i>
-                                            <i class="fas fa-comment"></i>
-                                            <i class="fas fa-share"></i>
-                                            <span class="mock-likes"><i class="fas fa-heart"></i> 1.2K</span>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="app-slide">
+                                <img src="assets/ss/5.png" alt="Ekran 5" onerror="this.src='https://placehold.co/320x650/1e293b/10b981?text=Ekran+5'">
                             </div>
-                            <!-- Bottom nav -->
-                            <div class="mock-bottom-nav">
-                                <div class="mock-nav-item"><i class="fas fa-home"></i><span>Ana Sayfa</span></div>
-                                <div class="mock-nav-item"><i class="fas fa-compass"></i><span>Keşfet</span></div>
-                                <div class="mock-nav-item mock-nav-center"><i class="fas fa-plus"></i></div>
-                                <div class="mock-nav-item"><i class="fas fa-utensils"></i><span>Beslenme</span></div>
-                                <div class="mock-nav-item mock-nav-active"><i class="fas fa-user"></i><span>Profil</span></div>
+                            <div class="app-slide">
+                                <img src="assets/ss/6.png" alt="Ekran 6" onerror="this.src='https://placehold.co/320x650/1e293b/10b981?text=Ekran+6'">
                             </div>
                         </div>
+                        <div class="slider-dots">
+                            <span class="dot active" data-index="0" aria-label="Ekran 1"></span>
+                            <span class="dot" data-index="1" aria-label="Ekran 2"></span>
+                            <span class="dot" data-index="2" aria-label="Ekran 3"></span>
+                            <span class="dot" data-index="3" aria-label="Ekran 4"></span>
+                            <span class="dot" data-index="4" aria-label="Ekran 5"></span>
+                            <span class="dot" data-index="5" aria-label="Ekran 6"></span>
+                        </div>
                     </div>
+                    </div>
+                    <button class="slider-arrow slider-arrow-right" aria-label="Sonraki ekran">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
                 <div class="floating-card card-1">
                     <i class="fas fa-fire"></i>
