--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMMENSE - Fitness Sosyal Platformu</title>
+    <title>IMMENSE</title>
+    <link rel="icon" href="assets/ss/logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
     <!-- ========== NAVBAR ========== -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">IMMENSE<span class="dot"></span></a>
+            <a href="#" class="logo"><img src="assets/ss/logo.png" alt="IMMENSE">IMMENSE<span class="dot"></span></a>
             <div class="nav-menu">
                 <ul class="nav-links">
                     <li><a href="#community">Topluluk</a></li>
@@ -677,7 +678,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <a href="#" class="logo">IMMENSE<span class="dot">.</span></a>
+                    <a href="#" class="logo"><img src="assets/ss/logo.png" alt="IMMENSE">IMMENSE<span class="dot">.</span></a>
                     <p>Fitness yolculuğunda en güçlü yardımcın. Antrenman, beslenme, sosyal platform ve koçluk - hepsi
                         bir arada.</p>
                     <div class="social-links">
