--- a/index.html
+++ b/index.html
@@ -133,6 +133,36 @@
         </div>
     </header>
 
+    <!-- ========== GERİ SAYIM ========== -->
+    <section class="countdown-section">
+        <div class="container">
+            <div class="countdown-wrap">
+                <span class="countdown-label"><i class="fas fa-rocket"></i> Yayınlanışa kalan süre — 15 Mart 2026</span>
+                <div class="countdown-timer">
+                    <div class="countdown-unit">
+                        <span class="countdown-value" id="countdown-days">00</span>
+                        <span class="countdown-suffix">gün</span>
+                    </div>
+                    <span class="countdown-sep">:</span>
+                    <div class="countdown-unit">
+                        <span class="countdown-value" id="countdown-hours">00</span>
+                        <span class="countdown-suffix">saat</span>
+                    </div>
+                    <span class="countdown-sep">:</span>
+                    <div class="countdown-unit">
+                        <span class="countdown-value" id="countdown-minutes">00</span>
+                        <span class="countdown-suffix">dk</span>
+                    </div>
+                    <span class="countdown-sep">:</span>
+                    <div class="countdown-unit">
+                        <span class="countdown-value" id="countdown-seconds">00</span>
+                        <span class="countdown-suffix">sn</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- ========== BÖLÜM 3: FİTNESS TOPLULUĞUN ========== -->
     <section id="community" class="community-section">
         <div class="container">
